Добалены таблици в базу данных для страници кпные клиенты и все поля которые нужно сохранять и сохранение этих клиентов и этих полей полей, пофикшены количество звонков и убраны звонки которые не должны быть у этого менеджера, подпралена статистика звонков у менеджера, подпралены алгоритмы подтверждения звока и  подсказка что этот звонок подтвержден

--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -40,7 +40,7 @@
       <table mat-table [dataSource]="actual" [trackBy]="getTrackBy">
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)"  *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -214,7 +214,7 @@
       <table mat-table [dataSource]="recordShipment" [trackBy]="getTrackBy">
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -356,7 +356,7 @@
         <ng-container matColumnDef="filler">
           <th mat-header-cell *matHeaderCellDef
               [style.text-align]="center"
-              [attr.colspan]="18"
+              [attr.colspan]="19"
               style="background-color: #fff"></th>
         </ng-container>
 
@@ -393,7 +393,7 @@
 
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -535,7 +535,7 @@
         <ng-container matColumnDef="filler">
           <th mat-header-cell *matHeaderCellDef
               [style.text-align]="center"
-              [attr.colspan]="18"
+              [attr.colspan]="19"
               style="background-color: #fff"></th>
         </ng-container>
 
@@ -571,7 +571,7 @@
       <table mat-table [dataSource]="newOrResuscitating" [trackBy]="getTrackBy">
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -713,7 +713,7 @@
         <ng-container matColumnDef="filler">
           <th mat-header-cell *matHeaderCellDef
               [style.text-align]="center"
-              [attr.colspan]="18"
+              [attr.colspan]="19"
               style="background-color: #fff"></th>
         </ng-container>
 
@@ -749,7 +749,7 @@
 
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -891,7 +891,7 @@
         <ng-container matColumnDef="filler">
           <th mat-header-cell *matHeaderCellDef
               [style.text-align]="center"
-              [attr.colspan]="18"
+              [attr.colspan]="19"
               style="background-color: #fff"></th>
         </ng-container>
 
@@ -927,7 +927,7 @@
 
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -1069,7 +1069,7 @@
         <ng-container matColumnDef="filler">
           <th mat-header-cell *matHeaderCellDef
               [style.text-align]="center"
-              [attr.colspan]="18"
+              [attr.colspan]="19"
               style="background-color: #fff"></th>
         </ng-container>
 
@@ -1109,7 +1109,7 @@
 
 
           <ng-container matColumnDef="elect">
-            <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+            <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
             <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
           </ng-container>
 
@@ -1251,7 +1251,7 @@
           <ng-container matColumnDef="filler">
             <th mat-header-cell *matHeaderCellDef
                 [style.text-align]="center"
-                [attr.colspan]="18"
+                [attr.colspan]="19"
                 style="background-color: #fff"></th>
           </ng-container>
 
