--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
@@ -6,7 +6,7 @@
     <ul>
       <li><a routerLink="dashboard" routerLinkActive="active">Главная</a></li>
       <li><a routerLink="clients" routerLinkActive="active">Клиенты</a></li>
-      <li><a routerLink="ReachOutcomes" routerLinkActive="active">Результативность по "охвату"</a></li>
+      <li><a routerLink="ReachOutcomes" routerLinkActive="active">Крупные Клиентны</a></li>
     </ul>
   </nav>
 
