Изменина страница у контролера Звонки, теперь видно все звонки, добалены поля напрвление звонка, ответ, коментарий менеджера, коментарий контролера с редактирование и отклонением звонка, добалена возможность прослушать аудио звонок на странице , подготовка алгоритмов отклонения и коментирования звонка контролера, подготовка алгоритма для испраления и написания ответного коментария контролеру по звонку, добалены поля и таблици в базу для хранения способа общения и подверждений звонка

--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -102,3 +102,4 @@ th
     border-radius: 5px
     border: 1px solid #c4e4ff
     font-family: Roboto,"Helvetica Neue",sans-serif
+    margin-bottom: 5px
