--- a/WebUI/ClientApp/src/app/сontroler/controler.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.sass
@@ -1,6 +1,7 @@
 
 .wrapper
     padding: 0px 10px
+    width:120%!important
 
 .logout
     margin-left: auto
@@ -15,7 +16,6 @@
         padding: 15px
         border-radius: 99px
         cursor: pointer
-
 .mat-toolbar-row, .mat-toolbar-single-row
     padding-right: 0px
-
+    width:120%!important
