--- a/WebUI/Views/Shared/_ManagerLayout.cshtml
+++ b/WebUI/Views/Shared/_ManagerLayout.cshtml
@@ -29,7 +29,7 @@
 
 </head>
 
-<body style="background-color: #f5f7fa">
+<body style="background-color: #f5f7fa;">
 
     <nav>
         <ul class="nav-menu">
