--- a/WebUI/Views/Account/Index.cshtml
+++ b/WebUI/Views/Account/Index.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <!-- <base href="/"> -->
 
-    <title>OptimizedHTML 4</title>
+    <title>Hanasyo</title>
     <meta name="description" content="">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
