--- a/WebUI/ClientApp/src/app/сontroler/controler.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.html
@@ -4,7 +4,7 @@
   </div>
   <nav>
     <ul>   
-      <li><a routerLink="clients" routerLinkActive="active">Клиенты</a></li>      
+      <li><a routerLink="clients" routerLinkActive="active">Звонки</a></li>      
     </ul>
   </nav>
 
