--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -18,13 +18,11 @@ table
     table-layout: fixed
 
 td
-    padding-left: 5px !important
-    padding-right: 5px !important
+    padding: 8px !important
     border-bottom: none
     white-space:nowrap
     overflow:hidden
     color: #1C1C1C !important
-    text-overflow:ellipsis
 
 th 
     padding-left: 15px !important
