--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/correction-response/correction-response.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/correction-response/correction-response.component.sass
@@ -88,3 +88,14 @@ table
     tr
         &:nth-child(2n)
             background: rgba(222, 237, 255, 0.2)
+.btnAccept
+    background: -moz-linear-gradient(#c4e4ff, #EBFFFF)
+    background: -webkit-gradient(linear, 0 0, 0 100%, from(#c4e4ff), to(#EBFFFF))
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c4e4ff', endColorstr='#EBFFFF')
+    padding: 3px 7px
+    -moz-border-radius: 5px
+    -webkit-border-radius: 5px
+    border-radius: 5px
+    border: 1px solid #c4e4ff
+    font-family: Roboto,"Helvetica Neue",sans-serif
+    margin-bottom: 5px
