Алгоритмы загрузки всех клиентов и менеджеров на пустую базу, загрузка клиентов и менеджеров на пустую базу

--- a/WebUI/ClientApp/src/app/admin/managers/dialogs/edit-manager-dialog/edit-manager-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/dialogs/edit-manager-dialog/edit-manager-dialog.component.html
@@ -27,6 +27,9 @@
       <option [value]="4">
         Проверяющий звонков
       </option>
+      <option [value]="5">
+        Ротльт не определена
+      </option>
     </select>
   </div>
   </form>
