Попралена верстака на странице клиентов у менеджера, поправлена верстка на странице звонков у контролёра, модернизация алгоритма сортировки звонков по типам

--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -14,16 +14,17 @@
 .textInputField
     height: 27px
 
+
 table
     table-layout: fixed
+    width:100%
 
 td
     padding: 8px !important
     border-bottom: none
-    white-space:nowrap
+    white-space:normal
     overflow:hidden
     color: #1C1C1C !important
-
 th 
     padding-left: 15px !important
     padding-right: 5px !important
