Добалены иммена аккаунта везде на аккаунте с верху

--- a/WebUI/ClientApp/src/app/manager-any/manager-any.component.html
+++ b/WebUI/ClientApp/src/app/manager-any/manager-any.component.html
@@ -9,7 +9,7 @@
   </nav>
 
   <div class="logout">
-    Менеджер
+    Маркетолог: {{manager?.login}}
     <i class="fas fa-sign-out-alt" (click)="logout()"></i>
   </div>
 </mat-toolbar>
