--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
@@ -11,7 +11,7 @@
   </nav>
 
   <div class="logout">
-    Менеджер
+    Менеджер: {{manager?.login}}
     <i class="fas fa-sign-out-alt" (click)="logout()"></i>
   </div>
 </mat-toolbar>
