--- a/WebUI/ClientApp/src/app/сontroler/controler.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.html
@@ -9,7 +9,7 @@
   </nav>
 
   <div class="logout">
-    Контролер
+    Контролер: {{manager?.login}}
     <i class="fas fa-sign-out-alt" (click)="logout()"></i>
   </div>
 </mat-toolbar>
