--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -100,3 +100,31 @@ th
     border: 1px solid #c4e4ff
     font-family: Roboto,"Helvetica Neue",sans-serif
     margin-bottom: 5px
+.filter
+    margin: 0 20px
+    text-align: right
+    input, select, button
+        display: inline-block 
+        width: 200px
+        padding: 10px 20px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
+        margin-bottom: 10px
+        background-color: white
+    .report
+        margin-right: 20px
+        display: inline-block 
+        padding: 10px 20px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
+        margin-bottom: 10px
+    select
+        width: 245px
+        margin-right: 20px
+    .calendar
+        width: 300px
+        position: absolute
+        right: 10px
+        z-index: 10
