--- a/WebUI/ClientApp/src/styles.sass
+++ b/WebUI/ClientApp/src/styles.sass
@@ -1,3 +1,4 @@
+@import '~minireset.css/minireset'
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css'
 
 
@@ -60,3 +61,12 @@ nav
   content: ""
   display: table
   clear: both
+
+@import "~igniteui-angular/lib/core/styles/themes/index"
+// Uncomment the following lines if you want to add a custom palette:
+// $primary: #731963 !default
+// $secondary: #ce5712 !default
+// $app-palette: igx-palette($primary, $secondary)
+
+@include igx-core()
+@include igx-theme($default-palette)
