--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -3,7 +3,8 @@
     <mat-card-title class="card-title">Проверка звонков</mat-card-title>
   </mat-card-header>
   <div class="filter clearfix">
-    <input (keyup)="applyFilter($event.target.value)" placeholder="Телефон или Название">
+    <input (keyup)="applyFilterNumberOrname($event.target.value)" placeholder="Телефон или Название">
+    <input (keyup)="applyFilterDuration($event.target.value)" placeholder="Продолжительность">
     <select [(ngModel)]="direction" (ngModelChange)="changeDirection()">
       <option [ngValue]=0>Все направленния</option>
       <option [ngValue]=1>Исходящие</option>
@@ -20,7 +21,7 @@
       <p class="dialog-section-title">
         {{acceptManager.login}} "{{acceptManager.phone}}"
       </p>
-      <table id="ID{{acceptManager.id}}" mat-table [dataSource]="acceptManager.callsDate">
+      <table id="ID{{acceptManager.id}}" mat-table [dataSource]="acceptManager.callsDate" >
 
         <ng-container matColumnDef="status">
           <th colspan="1" mat-header-cell *matHeaderCellDef></th>
@@ -33,7 +34,7 @@
         </ng-container>
 
         <ng-container matColumnDef="direction">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Статусзвонка звонка</th>
+          <th colspan="4" mat-header-cell *matHeaderCellDef>Статус звонка</th>
           <td colspan="4" mat-cell *matCellDef="let element">{{element.direction}} </td>
         </ng-container>
 
@@ -48,7 +49,7 @@
         </ng-container>
 
         <ng-container matColumnDef="phone">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Номер телефона клиента</th>
+          <th colspan="4" mat-header-cell *matHeaderCellDef>Номер тел</th>
           <td colspan="4" mat-cell *matCellDef="let element">{{element.phone}}</td>
         </ng-container>
 
@@ -58,22 +59,22 @@
         </ng-container>
 
         <ng-container matColumnDef="date">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Дата начала звонка</th>
+          <th colspan="4" mat-header-cell *matHeaderCellDef>Дата</th>
           <td colspan="4" mat-cell *matCellDef="let element">{{element.date}}</td>
         </ng-container>
 
         <ng-container matColumnDef="comentCon">
-          <th colspan="14" mat-header-cell *matHeaderCellDef>Коментарий контролера</th>
-          <td colspan="14" mat-cell *matCellDef="let element"><textarea style="width:250px;height:60px;">{{element.callsComments?.comment}}</textarea><br /> <button (click)="setNoAccept($event, element.id, element.clientId)" class="btnAccept">Отклонить</button> <button (click)="setAccept($event, element.id, element.clientId)" class="btnAccept">Испралено</button></td>
+          <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
+          <td colspan="14" mat-cell *matCellDef="let element"><textarea style="width:250px;height:60px;">{{element.callsComments?.comment}}</textarea><br /> <button (click)="setNoAccept($event, element.id, element.clientId)" class="btnAccept">Отклонить</button> <button (click)="setAccept($event, element.id, element.clientId)" class="btnAccept">Испраленно</button></td>
         </ng-container>
 
         <ng-container matColumnDef="comentCli">
-          <th colspan="7" mat-header-cell *matHeaderCellDef>Коментарий менеджера</th>
+          <th colspan="7" mat-header-cell *matHeaderCellDef>Комментарий менеджера</th>
           <td colspan="7" mat-cell *matCellDef="let element">{{element.callsComments?.managerComment}}</td>
         </ng-container>
 
         <ng-container matColumnDef="refAudio">
-          <th colspan="14" mat-header-cell *matHeaderCellDef>Ауди запись</th>
+          <th colspan="14" mat-header-cell *matHeaderCellDef>Аудио запись</th>
           <td colspan="14" mat-cell *matCellDef="let element"><audio style="height:20px" controls preload="none" src="{{element.referenceAudioVoice}}"></audio></td>
         </ng-container>
 
