--- a/WebUI/ClientApp/src/app/сontroler/controler.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.html
@@ -3,8 +3,9 @@
     Мир Суши
   </div>
   <nav>
-    <ul>   
-      <li><a routerLink="clients" routerLinkActive="active">Звонки</a></li>      
+    <ul>
+      <li><a routerLink="calls" routerLinkActive="active">Звонки</a></li>
+      <li><a routerLink="report" routerLinkActive="active">Отчет</a></li>
     </ul>
   </nav>
 
