--- a/WebUI/ClientApp/src/app/manager-rm/reach-outcomes/components/reach-outcomes/reach-outcomes.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/reach-outcomes/components/reach-outcomes/reach-outcomes.component.html
@@ -7,22 +7,32 @@
 
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Название</th>
-      <td mat-cell *matCellDef="let element" style="max-width: 300px"  (dblclick)="OpenDialogResult(element.clientId)">{{element.nameClient}} </td>
+      <td mat-cell *matCellDef="let element"  (dblclick)="OpenDialogResult(element.clientId)">{{element.nameClient}} </td>
     </ng-container>
 
     <ng-container matColumnDef="phone1">
       <th mat-header-cell *matHeaderCellDef>Номер телефона клиента</th>
-      <td mat-cell *matCellDef="let element" style="max-width: 300px"  (dblclick)="OpenDialogResult(element.clientId)">{{element.phones[0]?.phone}}, {{element.phones[1]?.phone}}</td>
+      <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)">{{element.phones[0]?.phone}}, {{element.phones[1]?.phone}}</td>
     </ng-container>
 
     <ng-container matColumnDef="contactName">
       <th mat-header-cell *matHeaderCellDef>Контактное лицо, должность</th>
-      <td mat-cell *matCellDef="let element" style="max-width: 300px"  (dblclick)="OpenDialogResult(element.clientId)">{{element.contactName}}, {{element.position}}</td>
+      <td mat-cell *matCellDef="let element"  (dblclick)="OpenDialogResult(element.clientId)">{{element.contactName}}, {{element.position}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="focusProducts" >
+    <ng-container matColumnDef="weekPlanReg">
+      <th mat-header-cell *matHeaderCellDef>План RM</th>
+      <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)" title='{{element.weekPlanDtoReg?.plan}}'>{{getPlanDot(element.weekPlanDtoReg? element.weekPlanDtoReg.plan : "")}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="weekPlanEsc">
+      <th mat-header-cell *matHeaderCellDef>План MC</th>
+      <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)" title='{{element.weekPlanDtoEsc?.plan}}'>{{getPlanDot(element.weekPlanDtoEsc ? element.weekPlanDtoEsc.plan : "")}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="focusProducts">
       <th mat-header-cell *matHeaderCellDef>Фокусная продукция</th>
-      <td  mat-cell *matCellDef="let element" style="max-width: 300px"><textarea (focusout)="addFocusProduct($event, element.clientId)" style="min-width:90%;min-height:50px;">{{element.focusProducts}}</textarea></td>
+      <td mat-cell *matCellDef="let element"><textarea (focusout)="addFocusProduct($event, element.clientId)" style="min-width:90%;min-height:50px;">{{element.focusProducts}}</textarea></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
