--- a/WebUI/ClientApp/src/app/сontroler/controler.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.html
@@ -4,6 +4,7 @@
   </div>
   <nav>
     <ul>
+      <li><a href="admin" routerLinkActive="active">Админ панель</a></li>
       <li><a routerLink="calls" routerLinkActive="active">Звонки</a></li>
       <li><a routerLink="report" routerLinkActive="active">Отчет</a></li>
     </ul>
