--- a/WebUI/ClientApp/src/app/admin/admin.component.html
+++ b/WebUI/ClientApp/src/app/admin/admin.component.html
@@ -4,9 +4,10 @@
   </div>
   <nav>
     <ul>
-      <li><a [routerLink]="[ 'clients' ]" routerLinkActive="active">Клиенты</a></li>     
-      <li><a [routerLink]="[ 'managers' ]" routerLinkActive="active">Менеджеры</a></li>  
-      <li><a [routerLink]="[ 'workgroups' ]" routerLinkActive="active">Рабочие группы</a></li> 
+      <li><a [routerLink]="[ 'clients' ]" routerLinkActive="active">Клиенты</a></li>
+      <li><a [routerLink]="[ 'managers' ]" routerLinkActive="active">Менеджеры</a></li>
+      <li><a [routerLink]="[ 'workgroups' ]" routerLinkActive="active">Рабочие группы</a></li>
+      <li><a href="controler" routerLinkActive="active">Контроль</a></li>
     </ul>
   </nav>
   <div class="logout">
