--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -30,7 +30,7 @@
 
         <ng-container matColumnDef="statusCall">
           <th colspan="4" mat-header-cell *matHeaderCellDef>Статус</th>
-          <td colspan="4" mat-cell *matCellDef="let element">{{element.contactType == 40 ? "Подтверждён" : "Не подтвержден"}}</td>
+          <td colspan="4" mat-cell *matCellDef="let element"><span *ngIf="element.contactType != 50"> {{element.contactType == 40 ? "Подтверждён" : "Не подтвержден"}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef="direction">
@@ -65,7 +65,10 @@
 
         <ng-container matColumnDef="comentCon">
           <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
-          <td colspan="14" mat-cell *matCellDef="let element"><textarea style="width:250px;height:60px;">{{element.callsComments?.comment}}</textarea><br /> <button (click)="setNoAccept($event, element.id, element.clientId)" class="btnAccept">Отклонить</button> <button (click)="setAccept($event, element.id, element.clientId)" class="btnAccept">Испраленно</button></td>
+          <td colspan="14" mat-cell *matCellDef="let element"><textarea *ngIf="element.contactType != 50" style="width:250px;height:60px;">{{element.callsComments?.comment}}</textarea><br />
+          <button *ngIf="element.contactType != 50" (click)="setNoAccept($event, element.id, element.clientId)" class="btnAccept">Отклонить</button>
+          <button *ngIf="element.contactType != 50" (click)="setAccept($event, element.id, element.clientId)" class="btnAccept">Испраленно</button>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="comentCli">
